fix: cpp file build by g++ not by gcc

--- a/asynctasks.ini
+++ b/asynctasks.ini
@@ -1,7 +1,8 @@
 # 定义一个新任务
 [file-build]
 # 定义任务需要执行的命令，以 `$(...)` 形式出现的宏会在执行时被具体替换
-command:c,cpp=gcc -O2 "$(VIM_FILEPATH)" -o "$(VIM_FILEDIR)/$(VIM_FILENOEXT)"
+command:c=gcc -O2 "$(VIM_FILEPATH)" -o "$(VIM_FILEDIR)/$(VIM_FILENOEXT)"
+command:cpp=g++ -O2 "$(VIM_FILEPATH)" -o "$(VIM_FILEDIR)/$(VIM_FILENOEXT)"
 command:go=go build -o "$(VIM_PATHNOEXT)" "$(VIM_FILEPATH)"
 # 定义命令运行的目录
 cwd=$(VIM_FILEDIR)
