feat: use Glow to preview markdown

--- a/asynctasks.ini
+++ b/asynctasks.ini
@@ -20,5 +20,6 @@ command:lua=lua "$(VIM_FILENAME)"
 command:perl=perl "$(VIM_FILENAME)"
 command:ruby=ruby "$(VIM_FILENAME)"
 command:html=google-chrome-stable "$(VIM_FILENAME)"
+command:markdown=glow
 output=terminal
 cwd=$(VIM_FILEDIR)
