feat: use prodoc.nvim to instead of nerdcommenter

--- a/coc-settings.json
+++ b/coc-settings.json
@@ -1,11 +1,11 @@
 {
     "yank.byteLengthLimit": 40960,
     "yank.limit": 6,
-    "git.addedSign.text": "|",
-    "git.removedSign.text": "|",
-    "git.changeRemovedSign.text": "|",
-    "git.topRemovedSign.text": "|",
-    "git.changedSign.text": "|",
+    "git.addedSign.text": "▊",
+    "git.removedSign.text": "▊",
+    "git.changeRemovedSign.text": "▊",
+    "git.topRemovedSign.text": "▊",
+    "git.changedSign.text": "▊",
     "git.addedSign.hlGroup": "DiffAdd",
     "git.changedSign.hlGroup": "DiffChange",
     "git.removedSign.hlGroup": "DiffDelete",
