update new plugin

--- a/asynctasks.ini
+++ b/asynctasks.ini
@@ -19,6 +19,7 @@ command:sh=sh "$(VIM_FILENAME)"
 command:lua=lua "$(VIM_FILENAME)"
 command:perl=perl "$(VIM_FILENAME)"
 command:ruby=ruby "$(VIM_FILENAME)"
+command:rust=cargo run
 command:html=google-chrome-stable "$(VIM_FILENAME)"
 command:markdown=glow
 output=terminal
