--- a/coc-settings.json
+++ b/coc-settings.json
@@ -40,20 +40,13 @@
   },
   "snippets.ultisnips.enable": false,
   "hover.floatConfig": { "border": true, "title": "LSP Hover Doc" },
+  "signature.floatConfig": { "border": true, "title": "LSP Signature" },
   "pairs.enableCharacters": ["(", "[", "{", "'", "\"", "`"],
   "semanticTokens.enable": true,
-  "coc.preferences.formatOnSaveFiletypes": [
-    "json",
-    "typescriptreact",
-    "typescript",
-    "vue",
-    "lua"
-  ],
+  "coc.preferences.formatOnSave": true,
   "Lua.telemetry.enable": true,
   "Lua.diagnostics.globals": ["vim", "packer_plugins"],
   "inlayHint.enable": false,
-  "stylua.styluaPath": "/usr/local/bin/stylua",
-  "stylua.checkUpdate": false,
 
   "explorer.icon.enableNerdfont": true,
   "explorer.git.enable": false,
