--- a/coc-settings.json
+++ b/coc-settings.json
@@ -5,6 +5,7 @@
   "diagnostic.warningSign": " ",
   "diagnostic.infoSign": " ",
   "diagnostic.hintSign": " ",
+  "diagnostic.messageDelay": 500,
   "diagnostic.floatConfig": {
     "border": true,
     "rounded": true,
@@ -50,5 +51,6 @@
 
   "explorer.icon.enableNerdfont": true,
   "explorer.git.enable": false,
-  "explorer.width": 35
+  "explorer.width": 35,
+  "colors.enable": true
 }
