--- a/coc-settings.json
+++ b/coc-settings.json
@@ -56,5 +56,6 @@
   "explorer.width": 35,
   "colors.enable": true,
 
-  "snippets.userSnippetsDirectory": "~/.config/nvim/snippets"
+  "snippets.userSnippetsDirectory": "~/.config/nvim/snippets",
+  "pylsp.plugins.pycodestyle.maxLineLength": 130,
 }
