--- a/coc-settings.json
+++ b/coc-settings.json
@@ -57,5 +57,5 @@
   "colors.enable": true,
 
   "snippets.userSnippetsDirectory": "~/.config/nvim/snippets",
-  "pylsp.plugins.pycodestyle.maxLineLength": 130,
+  "pylsp.plugins.pycodestyle.maxLineLength": 130
 }
