--- a/.vim/coc-settings.json
+++ b/.vim/coc-settings.json
@@ -1,5 +1,7 @@
 {
   "Lua.workspace.library": [
+    "${3rd}/luv/library",
+    "${3rd}/luv/library",
     "${3rd}/luv/library"
   ],
   "Lua.workspace.checkThirdParty": false
