--- a/extensions/coc-pos/package.json
+++ b/extensions/coc-pos/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "coc-winbar",
+  "name": "coc-pos",
   "version": "0.1.0",
   "description": "",
   "author": "ph <chenyi.ph@outlook.com>",
