--- a/coc-settings.json
+++ b/coc-settings.json
@@ -1,88 +1,89 @@
 {
-  "semanticTokens.enable": true,
-  "snippets.snipmate.enable": true,
-  "snippets.ultisnips.enable": false,
-  "coc.preferences.formatOnSave": true,
-  "coc.preferences.enableMessageDialog": true,
-  "outline.autoPreview": true,
-  "diagnostic.floatConfig": {
-    "border": true,
-    "title": "diagnostic",
-    "rounded": true
-  },
-  "hover.floatConfig": {
-    "border": true,
-    "title": "hover doc"
-  },
-  "signature.floatConfig": {
-    "shadow": true
-  },
-  "suggest.completionItemKindLabels": {
-    "constructor": "\ufb25",
-    "keyword": "\uf1de",
-    "variable": "\ue79b",
-    "value": "\uf89f",
-    "operator": "\u03a8",
-    "function": "\u0192",
-    "reference": "\ufa46",
-    "constant": "\uf8fe",
-    "method": "\uf09a",
-    "struct": "\ufb44",
-    "class": "\uf0e8",
-    "interface": "\uf417",
-    "text": "\ue612",
-    "enum": "\uf435",
-    "enumMember": "\uf02b",
-    "module": "\uf40d",
-    "color": "\ue22b",
-    "property": "\ue624",
-    "field": "\uf9be",
-    "unit": "\uf475",
-    "event": "\ufacd",
-    "file": "\uf723",
-    "folder": "\uf114",
-    "snippet": "\ue60b",
-    "typeParameter": "\uf728",
-    "default": " "
-  },
-  "suggest.pumFloatConfig": {
-    "shadow": true
-  },
-  "suggest.virtualText": true,
-  "diagnostic.errorSign": " ",
-  "diagnostic.warningSign": " ",
-  "diagnostic.hintSign": " ",
-  "diagnostic.infoSign": " ",
-  "diagnostic.enableMessage": "jump",
-  "diagnostic.virtualText": true,
-  "typescript.format.enable": false,
-  "explorer.position": "right",
-  "explorer.git.enable": false,
-  "explorer.diagnostic.enableSubscriptNumber": false,
-  "explorer.keyMappings.global": {
-    "s": "open:vsplit",
-    "S": "open:split",
-    "o": ["wait", "expandable?", ["expanded?", "collapse", "expand"], "open"],
+	"semanticTokens.enable": true,
+	"snippets.snipmate.enable": true,
+	"snippets.ultisnips.enable": false,
+	"coc.preferences.formatOnSave": true,
+	"coc.preferences.enableMessageDialog": true,
+	"outline.autoPreview": true,
+	"diagnostic.floatConfig": {
+		"border": true,
+		"title": "diagnostic",
+		"rounded": true
+	},
+	"hover.floatConfig": {
+		"border": true,
+		"title": "hover doc"
+	},
+	"signature.floatConfig": {
+		"shadow": true
+	},
+	"suggest.completionItemKindLabels": {
+		"constructor": "\ufb25",
+		"keyword": "\uf1de",
+		"variable": "\ue79b",
+		"value": "\uf89f",
+		"operator": "\u03a8",
+		"function": "\u0192",
+		"reference": "\ufa46",
+		"constant": "\uf8fe",
+		"method": "\uf09a",
+		"struct": "\ufb44",
+		"class": "\uf0e8",
+		"interface": "\uf417",
+		"text": "\ue612",
+		"enum": "\uf435",
+		"enumMember": "\uf02b",
+		"module": "\uf40d",
+		"color": "\ue22b",
+		"property": "\ue624",
+		"field": "\uf9be",
+		"unit": "\uf475",
+		"event": "\ufacd",
+		"file": "\uf723",
+		"folder": "\uf114",
+		"snippet": "\ue60b",
+		"typeParameter": "\uf728",
+		"default": " "
+	},
+	"suggest.pumFloatConfig": {
+		"shadow": true
+	},
+	"suggest.virtualText": true,
+	"diagnostic.errorSign": " ",
+	"diagnostic.warningSign": " ",
+	"diagnostic.hintSign": " ",
+	"diagnostic.infoSign": " ",
+	"diagnostic.enableMessage": "jump",
+	"diagnostic.virtualText": true,
+	"typescript.format.enable": false,
+	"explorer.position": "right",
+	"explorer.git.enable": false,
+	"explorer.trash.command": "rm -rf %s",
+	"explorer.diagnostic.enableSubscriptNumber": false,
+	"explorer.keyMappings.global": {
+		"s": "open:vsplit",
+		"S": "open:split",
+		"o": ["wait", "expandable?", ["expanded?", "collapse", "expand"], "open"],
 
-    "d": "delete",
-    "x": "cutFile",
+		"d": "delete",
+		"x": "cutFile",
 
-    "H": "toggleHidden"
-  },
-  "explorer.sources": [
-    {
-      "name": "file",
-      "expand": true
-    }
-  ],
-  "explorer.icon.enableNerdfont": true,
-  "[go]": {
-    "coc.preferences.formatOnSave": true
-  },
-  "nil.formatting.command": ["nixpkgs-fmt"],
-  "Lua.format.enable": false,
-  "prettier.requireConfig": true,
-  "eslint.autoFixOnSave": true,
-  "eslint.format.enable": true,
-  "prettier.enable": true,
+		"H": "toggleHidden"
+	},
+	"explorer.sources": [
+		{
+			"name": "file",
+			"expand": true
+		}
+	],
+	"explorer.icon.enableNerdfont": true,
+	"[go]": {
+		"coc.preferences.formatOnSave": true
+	},
+	"nil.formatting.command": ["nixpkgs-fmt"],
+	"Lua.format.enable": false,
+	"prettier.requireConfig": true,
+	"eslint.autoFixOnSave": true,
+	"eslint.format.enable": true,
+	"prettier.enable": true
 }
