--- a/extensions/coc-pos/package.json
+++ b/extensions/coc-pos/package.json
@@ -1,7 +1,7 @@
 {
 	"name": "coc-pos",
 	"version": "0.1.0",
-	"description": "",
+	"description": "A document symbol path show in winbar extension.",
 	"author": "ph <chenyi.ph@outlook.com>",
 	"license": "MIT",
 	"main": "out.js",
