fix stylua wrong

--- a/extensions/coc-stylua/package.json
+++ b/extensions/coc-stylua/package.json
@@ -1,47 +1,52 @@
 {
-  "name": "coc-stylua",
-  "version": "0.1.0",
-  "description": "",
-  "author": "ph <chenyi.ph@outlook.com>",
-  "license": "MIT",
-  "main": "out.js",
-  "keywords": [
-    "coc.nvim"
-  ],
-  "engines": {
-    "coc": "^0.0.82"
-  },
-  "scripts": {
-    "watch": "node esbuild.mjs --watch",
-    "build": "node esbuild.mjs",
-    "prepare": "node esbuild.mjs"
-  },
-  "devDependencies": {
-    "@types/node": "^20.11.5",
-    "coc.nvim": "^0.0.83-next.18",
-    "esbuild": "^0.19.8",
-    "typescript": "^5.3.3"
-  },
-  "activationEvents": [
-    "*"
-  ],
-  "contributes": {
-    "configuration": {
-      "type": "object",
-      "title": "coc-stylua configuration",
-      "properties": {
-        "coc-stylua.enable": {
-          "type": "boolean",
-          "default": true,
-          "description": "Enable coc-stylua extension"
-        },
-        "coc-stylua.binPath": {
-          "type": "string",
-          "default": "",
-          "description": "Stylua binary path."
-        }
-      }
-    },
-    "commands": []
-  }
+	"name": "coc-stylua",
+	"version": "0.1.0",
+	"description": "",
+	"author": "ph <chenyi.ph@outlook.com>",
+	"license": "MIT",
+	"main": "out.js",
+	"keywords": [
+		"coc.nvim"
+	],
+	"engines": {
+		"coc": "^0.0.82"
+	},
+	"scripts": {
+		"watch": "node esbuild.mjs --watch",
+		"build": "node esbuild.mjs",
+		"prepare": "node esbuild.mjs"
+	},
+	"devDependencies": {
+		"@types/node": "^20.11.5",
+		"coc.nvim": "^0.0.83-next.18",
+		"esbuild": "^0.19.8",
+		"typescript": "^5.3.3"
+	},
+	"activationEvents": [
+		"*"
+	],
+	"contributes": {
+		"configuration": {
+			"type": "object",
+			"title": "coc-stylua configuration",
+			"properties": {
+				"coc-stylua.enable": {
+					"type": "boolean",
+					"default": true,
+					"description": "Enable coc-stylua extension"
+				},
+				"coc-stylua.binPath": {
+					"type": "string",
+					"default": "",
+					"description": "Stylua binary path."
+				},
+				"coc-stylua.requireConfigFile": {
+					"type": "boolean",
+					"default": true,
+					"description": "require stylua.toml to format."
+				}
+			}
+		},
+		"commands": []
+	}
 }
