--- a/extensions/coc-pos/package.json
+++ b/extensions/coc-pos/package.json
@@ -5,6 +5,7 @@
 	"author": "ph <chenyi.ph@outlook.com>",
 	"license": "MIT",
 	"main": "out.js",
+	"type": "module",
 	"keywords": [
 		"coc.nvim"
 	],
@@ -17,8 +18,10 @@
 		"prepare": "node esbuild.mjs"
 	},
 	"devDependencies": {
+		"@antfu/eslint-config": "^2.6.4",
 		"coc.nvim": "^0.0.83-next.18",
 		"esbuild": "^0.19.8",
+		"eslint": "^8.56.0",
 		"typescript": "^5.3.3"
 	},
 	"activationEvents": [
