--- a/extensions/coc-pos/tsconfig.json
+++ b/extensions/coc-pos/tsconfig.json
@@ -3,13 +3,13 @@
     "target": "es2017",
     "lib": ["es2017", "es2018"],
     "module": "commonjs",
-    "declaration": false,
-    "sourceMap": true,
-    "outDir": "lib",
-    "strict": true,
     "moduleResolution": "node",
+    "strict": true,
     "noImplicitAny": false,
-    "esModuleInterop": true,
+    "declaration": false,
+    "outDir": "lib",
+    "sourceMap": true,
+    "esModuleInterop": true
   },
-  "include": ["src"],
+  "include": ["src"]
 }
