use builtin statusline instead of windline.nvim

--- a/coc-settings.json
+++ b/coc-settings.json
@@ -89,6 +89,7 @@
     "nixpkgs-fmt"
   ],
   "Lua.format.enable": false,
+  "Lua.hint.enable": false,
   "prettier.requireConfig": true,
   "eslint.autoFixOnSave": true,
   "eslint.format.enable": false,
